# cardemalm

./: .gitignore  CMakeLists.txt  README.md
cards/default/src/: card.c
frontend/res/shaders/: standard.fsh  standard.vsh
frontend/src/: active_card.c  card_essential.c  cardemalm_fe.h  gl_util.c  glad.c  io_util.c  main.c  mesh.c  shader.c  texture.c  window.c
include/: cardemalm.h  cardemalm_card.h
include/glad/: glad.h
